convex decomposition refs

--- a/compgeom.bib
+++ b/compgeom.bib
@@ -2,12 +2,102 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2020-11-30 14:54:24 -0600 
+%% Created for Jeff Erickson at 2021-11-26 15:18:58 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{ks-tbcds-02,
+	author = {Keil, Mark and Snoeyink, Jack},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	doi = {10.1142/S0218195902000803},
+	journal = {Int. J. Comput. Geom. Appl.},
+	number = {3},
+	pages = {181--192},
+	title = {On the time bound for convex decomposition of simple polygons},
+	volume = {12},
+	year = {2002},
+	bdsk-url-1 = {https://doi.org/10.1142/S0218195902000803}}
+
+@article{k-dpisc-85,
+	author = {Keil, Mark},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	doi = {10.1137/0214056},
+	journal = {{SIAM} J. Comput.},
+	number = {4},
+	pages = {799--814},
+	title = {Decomposing a Polygon into Simpler Components},
+	volume = {14},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1137/0214056}}
+
+@incollection{cd-ocd-85,
+	author = {Chazelle, Bernard and Dobkin, David},
+	booktitle = {Computational Geometry},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	doi = {10.1016/B978-0-444-87806-9.50009-8},
+	editor = {Toussaint, Godfried T.},
+	number = {2},
+	pages = {63--133},
+	publisher = {Elsevier},
+	series = {Machine Intelligence and Pattern Recognition},
+	title = {Optimal Convex Decompositions},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1016/B978-0-444-87806-9.50009-8}}
+
+@inproceedings{cd-dpicp-79,
+	author = {Chazelle, Bernard and Dobkin, David},
+	booktitle = {Proc. 11th Ann. ACM Symp. Theory Comput.},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	doi = {10.1145/800135.804396},
+	pages = {38--48},
+	title = {Decomposing a polygon into its convex parts},
+	year = {1979},
+	bdsk-url-1 = {https://doi.org/10.1145/800135.804396}}
+
+@phdthesis{c-cgc-80,
+	author = {Chazelle, Bernard Marie},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	note = {Technical Report CMU-CS-80150, Carnegie Mellon Univ.},
+	school = {Yale Univ.},
+	title = {Computational Geometry and Convexity},
+	url = {https://www.cs.princeton.edu/~chazelle/pubs/PhD.pdf},
+	year = {1980},
+	bdsk-url-1 = {https://www.cs.princeton.edu/~chazelle/pubs/PhD.pdf}}
+
+@article{hm-ftpwr-85,
+	author = {Hertel, Stefan and Mehlhorn, Kurt},
+	comments = {4-approx optimal convex decomposition (via diagonals)},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:15:40 -0600},
+	doi = {10.1016/S0019-9958(85)80044-9},
+	journal = {Inf. Control},
+	number = {1--3},
+	pages = {52--76},
+	title = {Fast triangulation of the plane with respect to simple polygons},
+	volume = {64},
+	year = {1985},
+	bdsk-url-1 = {https://doi.org/10.1016/S0019-9958(85)80044-9}}
+
+@incollection{g-dpicp-83,
+	author = {Greene, Daniel H.},
+	booktitle = {Computational Geometry},
+	comments = {Convex decomposition via diagonals in O(n^2 r^2) time; 4-approx via triangulation. No online version, publisher out of business.},
+	date-added = {2021-11-26 15:15:40 -0600},
+	date-modified = {2021-11-26 15:18:58 -0600},
+	editor = {Preparata, Franco P.},
+	publisher = {JAI Press},
+	series = {Advances in Computing Research},
+	title = {The decomposition of polygons into convex parts},
+	volume = {1},
+	year = {1983}}
 
 @article{iim-vdlga-85,
 	author = {Imai, Hiroshi and Iri, Masao and Murota, Kazuo},
@@ -21,7 +111,7 @@
 	title = {Voronoi diagram in the {Laguerre} geometry and its applications},
 	volume = {14},
 	year = {1985},
-	Bdsk-Url-1 = {https://doi.org/10.1137/0214006}}
+	bdsk-url-1 = {https://doi.org/10.1137/0214006}}
 
 @article{m-dspce-94,
 	author = {McMullen, Peter},
@@ -57,7 +147,7 @@
 	pages = {424--426},
 	title = {Properties of the {Delaunay} Triangulation},
 	year = {1997},
-	Bdsk-Url-1 = {https://doi.org/10.1145/262839.263061}}
+	bdsk-url-1 = {https://doi.org/10.1145/262839.263061}}
 
 @article{egmn-vfmdtp-17,
 	author = {Edelsbrunner, Herbert and Glazyrin, Alexey and Musin, Oleg R. and Nikitenko, Anton},
@@ -70,44 +160,44 @@
 	title = {The {Voronoi} functional is maximized by the {Delaunay} triangulation in the plane},
 	volume = {37},
 	year = {2017},
-	Bdsk-Url-1 = {https://doi.org/10.1007/s00493-016-3308-y}}
+	bdsk-url-1 = {https://doi.org/10.1007/s00493-016-3308-y}}
 
 @article{v-napct3-09,
-	author = {Voronoï, Georges F.},
+	author = {Vorono{\"\i}, Georges F.},
 	date-added = {2020-07-18 17:25:20 -0500},
 	date-modified = {2020-07-18 17:25:50 -0500},
 	journal = {J.~Reine Angew. Math.},
 	pages = {67--182},
-	title = {Nouvelles applications des paramètres continus à la théorie des formes quadratiques. {Deuxième} mémoire. {Recherches} sur les parallélloèdres primitifs.},
+	title = {Nouvelles applications des param{\`e}tres continus {\`a} la th{\'e}orie des formes quadratiques. {Deuxi{\`e}me} m{\'e}moire. {Recherches} sur les parall{\'e}llo{\`e}dres primitifs.},
 	url = {https://eudml.org/doc/149311},
 	volume = {136},
 	year = {1909},
-	Bdsk-Url-1 = {http://eudml.org/doc/149276}}
+	bdsk-url-1 = {http://eudml.org/doc/149276}}
 
 @article{v-napct2-08,
-	author = {Voronoï, Georges F.},
+	author = {Vorono{\"\i}, Georges F.},
 	comments = {paraboloid lifting map},
 	date-added = {2020-07-18 17:23:45 -0500},
 	date-modified = {2020-07-18 17:35:43 -0500},
 	journal = {J.~Reine Angew. Math.},
 	pages = {198--287},
-	title = {Nouvelles applications des paramètres continus à la théorie des formes quadratiques. {Deuxième} mémoire. {Recherches} sur les parallélloèdres primitifs.},
+	title = {Nouvelles applications des param{\`e}tres continus {\`a} la th{\'e}orie des formes quadratiques. {Deuxi{\`e}me} m{\'e}moire. {Recherches} sur les parall{\'e}llo{\`e}dres primitifs.},
 	url = {https://eudml.org/doc/149291},
 	volume = {134},
 	year = {1908},
-	Bdsk-Url-1 = {http://eudml.org/doc/149276}}
+	bdsk-url-1 = {http://eudml.org/doc/149276}}
 
 @article{v-napct1-08,
-	author = {Voronoï, Georges F.},
+	author = {Vorono{\"\i}, Georges F.},
 	date-added = {2020-07-18 17:15:03 -0500},
 	date-modified = {2020-07-18 17:23:31 -0500},
 	journal = {J.~Reine Angew. Math.},
 	pages = {97--178},
-	title = {Nouvelles applications des paramètres continus à la théorie des formes quadratiques. {Premier} mémoire. {Sur} quelques propriétés des formes quadratiques positives parfaites},
+	title = {Nouvelles applications des param{\`e}tres continus {\`a} la th{\'e}orie des formes quadratiques. {Premier} m{\'e}moire. {Sur} quelques propri{\'e}t{\'e}s des formes quadratiques positives parfaites},
 	url = {http://eudml.org/doc/149276},
 	volume = {133},
 	year = {1908},
-	Bdsk-Url-1 = {http://eudml.org/doc/149276}}
+	bdsk-url-1 = {http://eudml.org/doc/149276}}
 
 @article{degm-ftds-14,
 	author = {Dolbilin, Nikolai P. and Edelsbrunner, Herbert and Glazyrin, Alexey and Musin, Oleg R.},
@@ -121,10 +211,10 @@
 	url = {http://www.mathjournals.org/mmj/2014-014-003/2014-014-003-003.html},
 	volume = {14},
 	year = {2014},
-	Bdsk-Url-1 = {http://www.mathjournals.org/mmj/2014-014-003/2014-014-003-003.html}}
+	bdsk-url-1 = {http://www.mathjournals.org/mmj/2014-014-003/2014-014-003-003.html}}
 
 @book{drs-tsaa-10,
-	author = {De Loera, Jesús and Rambau, Jörg and Santos, Francisco},
+	author = {De Loera, Jes{\'u}s and Rambau, J{\"o}rg and Santos, Francisco},
 	date-added = {2019-12-04 12:54:37 -0600},
 	date-modified = {2019-12-04 13:04:40 -0600},
 	doi = {10.1007/978-3-642-12971-1},
@@ -133,7 +223,7 @@
 	series = {Algorithms and Computation in Mathematics},
 	title = {Triangulations: Structures for Algorithms and Applications},
 	year = {2010},
-	Bdsk-Url-1 = {https://doi.org/10.1007/978-3-642-12971-1}}
+	bdsk-url-1 = {https://doi.org/10.1007/978-3-642-12971-1}}
 
 @article{l-tt-72,
 	author = {Lawson, Charles L.},
@@ -146,7 +236,7 @@
 	title = {Transforming triangulations},
 	volume = {3},
 	year = {1972},
-	Bdsk-Url-1 = {https://doi.org/10.1016/0012-365X(72)90093-3}}
+	bdsk-url-1 = {https://doi.org/10.1016/0012-365X(72)90093-3}}
 
 @article{ai-gravd-88,
 	author = {Aurenhammer, Franz and Imai, Hiroshi},
@@ -159,7 +249,7 @@
 	title = {Geometric relations among {Voronoi} diagrams},
 	volume = {27},
 	year = {1988},
-	Bdsk-Url-1 = {https://doi.org/10.1007/BF00181613}}
+	bdsk-url-1 = {https://doi.org/10.1007/BF00181613}}
 
 @inproceedings{aam-gpe-18,
 	arxiv = {1704.06969},
@@ -172,7 +262,7 @@
 	read = {1},
 	title = {The art gallery problem is {$\exists\mathbb{R}$}-complete},
 	year = {2018},
-	Bdsk-Url-1 = {https://doi.org/10.1145/3188745.3188868}}
+	bdsk-url-1 = {https://doi.org/10.1145/3188745.3188868}}
 
 @article{b-vdch-79,
 	author = {Brown, Kevin Q.},
@@ -185,7 +275,7 @@
 	title = {Voronoi diagrams from convex hulls},
 	volume = {9},
 	year = {1979},
-	Bdsk-Url-1 = {https://doi.org/10.1016/0020-0190(79)90074-7}}
+	bdsk-url-1 = {https://doi.org/10.1016/0020-0190(79)90074-7}}
 
 @article{a-pdpaa-87,
 	author = {Aurenhammer, Franz},
@@ -198,7 +288,7 @@
 	title = {Power diagrams: {Properties}, algorithms and applications},
 	volume = {16},
 	year = {1987},
-	Bdsk-Url-1 = {https://doi.org/10.1137/0216006}}
+	bdsk-url-1 = {https://doi.org/10.1137/0216006}}
 
 @article{es-vda-86,
 	author = {Edelsbrunner, Herbert and Seidel, Raimund},
@@ -211,7 +301,7 @@
 	title = {Voronoi diagrams and arrangements},
 	volume = {1},
 	year = {1986},
-	Bdsk-Url-1 = {https://doi.org/10.1007/BF02187681}}
+	bdsk-url-1 = {https://doi.org/10.1007/BF02187681}}
 
 @article{b-cccda-94,
 	author = {Brandt, Jonathan W.},
@@ -224,7 +314,7 @@
 	title = {Convergence and continuity criteria for discrete approximations of the continuous planar skeletons},
 	volume = {59},
 	year = {1994},
-	Bdsk-Url-1 = {https://doi.org/10.1006/ciun.1994.1007}}
+	bdsk-url-1 = {https://doi.org/10.1006/ciun.1994.1007}}
 
 @article{r-odtr-94,
 	author = {Rajan, V. T.},
@@ -239,7 +329,7 @@
 	title = {Optimality of the {Delaunay} Triangulation in {$\mathbb{R}^d$}},
 	volume = {12},
 	year = {1994},
-	Bdsk-Url-1 = {https://doi.org/10.1007/BF02574375}}
+	bdsk-url-1 = {https://doi.org/10.1007/BF02574375}}
 
 @article{dg-cop3d-97,
 	author = {Das, Gautam and Goodrich, Michael T.},
@@ -253,10 +343,10 @@
 	title = {On the complexity of optimization problems for 3-dimensional convex polyhedra and decisiosn trees},
 	volume = {8},
 	year = {1997},
-	Bdsk-Url-1 = {https://doi.org/10.1016/S0925-7721(97)00006-0}}
+	bdsk-url-1 = {https://doi.org/10.1016/S0925-7721(97)00006-0}}
 
 @article{g-pmcbh-60,
-	author = {Grünbaum, Branko},
+	author = {Gr{\"u}nbaum, Branko},
 	comments = {Claims Theorem 2 independently proved by Preston C. Hammer, whose proof was apparently never published},
 	date-added = {2017-08-10 19:51:23 +0000},
 	date-modified = {2017-08-10 20:12:17 +0000},
@@ -268,7 +358,7 @@
 	title = {Partitions of mass-distributions and convex bodies by hyperplanes},
 	volume = {10},
 	year = {1960},
-	Bdsk-Url-1 = {http://dx.doi.org/10.2140/pjm.1960.10.1257}}
+	bdsk-url-1 = {http://dx.doi.org/10.2140/pjm.1960.10.1257}}
 
 @article{m-lpltw-84,
 	author = {Megiddo, Nimrod},
@@ -282,7 +372,7 @@
 	title = {Linear programming in linear time when the dimension is fixed},
 	volume = {31},
 	year = {1984},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1145/2422.322418}}
+	bdsk-url-1 = {http://dx.doi.org/10.1145/2422.322418}}
 
 @article{is-scpzs-90,
 	author = {Iwano, Kazuo and Steiglitz, Kenneth},
@@ -297,7 +387,7 @@
 	title = {A semiring on convex polygons and zero-sum cycle problems},
 	volume = {19},
 	year = {1990},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1137/0219061}}
+	bdsk-url-1 = {http://dx.doi.org/10.1137/0219061}}
 
 @article{ce-oails-92,
 	author = {Chazelle, Bernard and Edelsbrunner, Herbert},
@@ -332,7 +422,7 @@
 	year = {1989}}
 
 @article{aghtu-acgg-08,
-	author = {Abellanas, Manuel and García, Alfredo and Hurtado, Ferran and Tejel, Javier and Urrutia, Jorge},
+	author = {Abellanas, Manuel and Garc{\'\i}a, Alfredo and Hurtado, Ferran and Tejel, Javier and Urrutia, Jorge},
 	comments = {weakly simple = non-self-crossing (no definition of latter)},
 	date-added = {2014-07-20 15:23:40 +0000},
 	date-modified = {2014-07-20 15:25:05 +0000},
@@ -373,7 +463,7 @@
 	title = {A New Polygon Nesting Trees Data Structure to Construct a Physical Polyhedral Object},
 	url = {http://www.scs.carleton.ca/content/new-polygon-nesting-trees-data-structure-construct-physical-polyhedral-object},
 	year = {2013},
-	Bdsk-Url-1 = {http://www.scs.carleton.ca/content/new-polygon-nesting-trees-data-structure-construct-physical-polyhedral-object}}
+	bdsk-url-1 = {http://www.scs.carleton.ca/content/new-polygon-nesting-trees-data-structure-construct-physical-polyhedral-object}}
 
 @article{bm-corgg-04,
 	author = {Bose, Prosenjit and Morin, Pat},
@@ -430,7 +520,7 @@
 	year = {2009}}
 
 @article{ist-dcgm-13,
-	author = {Ishaque, Mashhood and Souvaine, Diane L. and Tóth, Csaba D.},
+	author = {Ishaque, Mashhood and Souvaine, Diane L. and T{\'o}th, Csaba D.},
 	date-added = {2014-07-20 15:23:40 +0000},
 	date-modified = {2018-05-02 23:44:37 +0000},
 	journal = {Discrete Comput. Geom.},
@@ -441,7 +531,7 @@
 	year = {2013}}
 
 @book{mn-lpcgc-99,
-	author = {Mehlhorn, Kurt and Näher, Stefan},
+	author = {Mehlhorn, Kurt and N{\"a}her, Stefan},
 	date-added = {2014-07-20 15:23:40 +0000},
 	date-modified = {2014-07-20 15:23:40 +0000},
 	publisher = {Cambridge Univ. Press},
@@ -458,7 +548,7 @@
 	title = {Augmenting the Connectivity of Planar and Geometric Graphs},
 	volume = {16},
 	year = {2012},
-	Bdsk-Url-1 = {http://dx.doi.org/10.7155/jgaa.00275}}
+	bdsk-url-1 = {http://dx.doi.org/10.7155/jgaa.00275}}
 
 @incollection{w-sp-14,
 	author = {{Wikipedia contributors}},
@@ -468,7 +558,7 @@
 	note = {Last accessed June 26, 2014},
 	title = {Simple polygon},
 	url = {http://en.wikipedia.org/wiki/Simple_polygon},
-	Bdsk-Url-1 = {http://en.wikipedia.org/wiki/Simple_polygon}}
+	bdsk-url-1 = {http://en.wikipedia.org/wiki/Simple_polygon}}
 
 @inproceedings{sh-gip-76,
 	author = {Shamos, Michael I. and Hoey, Dan},
@@ -494,7 +584,7 @@
 	year = {1999}}
 
 @inproceedings{ht-pcbet-05,
-	author = {Hoffmann, Michael and Tóth, Csaba D.},
+	author = {Hoffmann, Michael and T{\'o}th, Csaba D.},
 	booktitle = {Proc. 21st Ann. Symp. Comput. Geom.},
 	comments = {weakly simple = non-self-crossing (no definition of latter)},
 	date-added = {2014-07-20 15:13:30 +0000},
@@ -521,7 +611,7 @@
 	booktitle = {Proc. 14th Scand. Workshop Algorithm Theory},
 	date-added = {2014-07-20 15:12:55 +0000},
 	date-modified = {2014-07-20 15:14:27 +0000},
-	editor = {Ravi, R. and and Inge Li Gørtz},
+	editor = {Ravi, R. and and Inge Li G{\o}rtz},
 	pages = {98--104},
 	publisher = {Springer},
 	read = {1},
@@ -544,7 +634,7 @@
 	year = {1997}}
 
 @article{addjs-sswg-93,
-	author = {Althöfer, Ingo and Das, Gautam and Dobkin, David P. and Joseph, Deborah and Soares, José},
+	author = {Alth{\"o}fer, Ingo and Das, Gautam and Dobkin, David P. and Joseph, Deborah and Soares, Jos{\'e}},
 	date-added = {2013-11-08 20:52:08 +0000},
 	date-modified = {2014-07-20 15:14:34 +0000},
 	journal = {Discrete Comput. Geom.},
@@ -591,7 +681,7 @@
 	year = {1999}}
 
 @book{g-cp-67,
-	author = {Grünbaum, Branko},
+	author = {Gr{\"u}nbaum, Branko},
 	date-added = {2013-10-29 04:14:03 +0000},
 	date-modified = {2013-10-29 04:18:18 +0000},
 	number = {XVI},
@@ -605,7 +695,7 @@
 	booktitle = {New Perspectives in Geometric Combinatorics},
 	date-added = {2013-08-02 16:31:38 +0000},
 	date-modified = {2013-08-02 16:38:15 +0000},
-	editor = {Billera, Louis J. and Björner, Anders and Greene, Curtis and Simion, Rodica E. and Stanley, Richard P.},
+	editor = {Billera, Louis J. and Bj{\"o}rner, Anders and Greene, Curtis and Simion, Rodica E. and Stanley, Richard P.},
 	pages = {293--336},
 	publisher = {MSRI Publications},
 	read = {1},
@@ -648,7 +738,7 @@
 	title = {Linear-time algorithms for visibility and shortest path problems inside triangulated simple polygons},
 	volume = {2},
 	year = {1987},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF01840360}}
+	bdsk-url-1 = {http://dx.doi.org/10.1007/BF01840360}}
 
 @article{gh-ospqs-89,
 	author = {Guibas, Leonidas J. and Hershberger, John},
@@ -673,10 +763,10 @@
 	title = {Implicitly representing arrangements of lines or segments},
 	volume = {4},
 	year = {1989},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/BF02187742}}
+	bdsk-url-1 = {http://dx.doi.org/10.1007/BF02187742}}
 
 @article{m-rsehc-93,
-	author = {Matoušek, Jiří},
+	author = {Matou{\v s}ek, Ji{\v r}{\'\i}},
 	date-added = {2013-02-08 22:35:07 +0000},
 	date-modified = {2014-07-20 15:14:15 +0000},
 	journal = {Discrete Comput. Geom.},
@@ -688,7 +778,7 @@
 	year = {1993}}
 
 @article{m-ept-92,
-	author = {Matoušek, Jiří},
+	author = {Matou{\v s}ek, Ji{\v r}{\'\i}},
 	date-added = {2013-02-08 22:03:51 +0000},
 	date-modified = {2013-02-08 22:04:16 +0000},
 	journal = {Discrete Comput. Geom.},
@@ -711,7 +801,7 @@
 	year = {1993}}
 
 @techreport{m-mcast-90,
-	author = {Matoušek, Jiří},
+	author = {Matou{\v s}ek, Ji{\v r}{\'\i}},
 	date-added = {2013-02-08 20:50:48 +0000},
 	date-modified = {2013-02-08 21:04:37 +0000},
 	institution = {Freie Univ. Berlin},
@@ -735,10 +825,10 @@
 	year = {1992}}
 
 @article{m-stwcn-91,
-	author = {Matoušek, Jiří},
+	author = {Matou{\v s}ek, Ji{\v r}{\'\i}},
 	date-added = {2013-02-08 20:27:09 +0000},
 	date-modified = {2013-02-08 20:51:34 +0000},
-	journal = {RAIRO Inform. Théor. Appl.},
+	journal = {RAIRO Inform. Th{\'e}or. Appl.},
 	number = {2},
 	pages = {103--123},
 	read = {1},
@@ -759,7 +849,7 @@
 	title = {On spanning trees with low crossing numbers},
 	volume = {594},
 	year = {1992},
-	Bdsk-Url-1 = {http://dx.doi.org/10.1007/3-540-55488-2_30}}
+	bdsk-url-1 = {http://dx.doi.org/10.1007/3-540-55488-2_30}}
 
 @article{cw-qrssf-89,
 	author = {Chazelle, Bernard and Welzl, Emo},
@@ -774,7 +864,7 @@
 	year = {1989}}
 
 @article{cp-cioor-10,
-	author = {Chan, Timothy M. and Pătraşcu, Mihai},
+	author = {Chan, Timothy M. and P{\u a}tra{\c s}cu, Mihai},
 	comments = {orthogonal emptiness (via dominance counting): O(n \sqrt{\log n}) space, O(log n/log log n) query time},
 	date-added = {2013-01-30 01:45:54 +0000},
 	date-modified = {2013-02-08 20:52:17 +0000},
@@ -915,12 +1005,13 @@
 	date-modified = {2020-11-30 14:54:24 -0600},
 	doi = {10.1142/S0218195995000064},
 	journal = {Int. J. Comput. Geom. Appl.},
-	keywords = {Fréchet distance, shape analysis, resemblance of curves, computational morphology},
+	keywords = {Fr{\'e}chet distance, shape analysis, resemblance of curves, computational morphology},
 	pages = {75--91},
 	read = {1},
-	title = {Computing the {Fréchet} distance between two polygonal curves},
+	title = {Computing the {Fr{\'e}chet} distance between two polygonal curves},
 	volume = {5},
-	year = {1995}}
+	year = {1995},
+	bdsk-url-1 = {https://doi.org/10.1142/S0218195995000064}}
 
 @techreport{st-csp-92,
 	author = {Shermer, Thomas and Toussaint, Godfried},
@@ -934,7 +1025,7 @@
 	type = {{Tech. Rep.}},
 	url = {ftp://fas.sfu.ca/pub/cs/TR/1992/CMPT92-11.ps.gz},
 	year = {1992},
-	Bdsk-Url-1 = {ftp://fas.sfu.ca/pub/cs/TR/1992/CMPT92-11.ps.gz}}
+	bdsk-url-1 = {ftp://fas.sfu.ca/pub/cs/TR/1992/CMPT92-11.ps.gz}}
 
 @article{t-cgpis-89,
 	author = {Toussaint, Godfried T.},
@@ -978,14 +1069,14 @@
 	chapter = {15},
 	date-added = {2012-06-24 00:24:11 +0000},
 	date-modified = {2013-02-08 20:51:34 +0000},
-	editor = {Sack, Jörg-Rüdiger and Urrutia, Jorge},
+	editor = {Sack, J{\"o}rg-R{\"u}diger and Urrutia, Jorge},
 	pages = {633--701},
 	publisher = {Elsevier Science},
 	read = {1},
 	title = {Geometric shortest paths and network optimization},
 	url = {http://www.ams.sunysb.edu/~jsbm/papers/survey.ps.gz},
 	year = {2000},
-	Bdsk-Url-1 = {http://www.ams.sunysb.edu/~jsbm/papers/survey.ps.gz}}
+	bdsk-url-1 = {http://www.ams.sunysb.edu/~jsbm/papers/survey.ps.gz}}
 
 @article{bmsw-sgps-11,
 	author = {Bose, Prosenjot and Maheshwari, Anil and Shu, Chang and Wuhrer, Stefanie},
@@ -1084,7 +1175,7 @@
 	journal = {Notices Imp. Petersburg Mineralog. Soc.},
 	note = {In Russian. Cited in \cite{sg-itfges-84}},
 	pages = {1--279},
-	title = {Načala Učeniya o Figurah [{Elements} of the study of figures]},
+	title = {Na{\v c}ala U{\v c}eniya o Figurah [{Elements} of the study of figures]},
 	volume = {24},
 	year = {1885}}
 
@@ -1125,7 +1216,7 @@
 	year = {1992}}
 
 @book{g-as-72,
-	author = {Grünbaum, Branko},
+	author = {Gr{\"u}nbaum, Branko},
 	date-added = {2011-12-27 14:34:42 +0000},
 	date-modified = {2013-02-08 20:51:45 +0000},
 	number = {10},
@@ -1161,7 +1252,7 @@
 
 @inproceedings{bfh-mg-95,
 	author = {Bendels, Heinzgerd and Fellner, Dieter W. and Havemann, Sven},
-	booktitle = {Modeling - Virtual Worlds - Distributed Graphics: Beiträge zum Internationalen Workshop MVD'95},
+	booktitle = {Modeling - Virtual Worlds - Distributed Graphics: Beitr{\"a}ge zum Internationalen Workshop MVD'95},
 	date-added = {2011-11-11 14:07:29 +0000},
 	date-modified = {2011-11-11 14:11:37 +0000},
 	editor = {Fellner, Dieter W.},
@@ -1172,7 +1263,7 @@
 
 @book{m-ism-88,
 	address = {Rockville, MD},
-	author = {Mäntylä, Martti},
+	author = {M{\"a}ntyl{\"a}, Martti},
 	date-added = {2011-11-11 13:48:45 +0000},
 	date-modified = {2013-02-08 20:51:37 +0000},
 	publisher = {Computer Science Press},
@@ -1427,7 +1518,7 @@
 	read = {1},
 	title = {Polytime algorithm for the shortest path in a homotopy class amidst semi-algebraic obstacles in the plane},
 	year = {1998},
-	Bdsk-Url-1 = {http://doi.acm.org/10.1145/281508.281528}}
+	bdsk-url-1 = {http://doi.acm.org/10.1145/281508.281528}}
 
 @inproceedings{c-tpca-82,
 	author = {Chazelle, Bernard},
@@ -1499,7 +1590,7 @@
 	title = {Triangulating a simple polygon in linear time},
 	volume = {6},
 	year = {1991},
-	Bdsk-Url-1 = {https://doi.org/10.1007/BF02574703}}
+	bdsk-url-1 = {https://doi.org/10.1007/BF02574703}}
 
 @article{agr-lttsp-01,
 	author = {Amato, Nancy M. and Goodrich, Michael T. and Ramos, Edgar},
