--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,20 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-10-25 14:16:07 -0500 
+%% Created for Jeff Erickson at 2021-11-26 15:16:28 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{cb-asant-88,
+	author = {Casson, Andrew J. and Bleiler, Steven A.},
+	date-added = {2021-10-29 10:25:45 -0500},
+	date-modified = {2021-10-29 10:27:05 -0500},
+	publisher = {Cambridge Univ. Press},
+	title = {Automorphisms of Surfaces after Nielsen and Thurston},
+	year = {1988}}
 
 @incollection{i-wtue3-74,
 	author = {Imrich, Wilfried},
