--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,44 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2021-11-26 15:16:28 -0600 
+%% Created for Jeff Erickson at 2022-05-13 13:19:24 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{g-dg-12,
+	author = {Geelen, Jim},
+	date-added = {2022-05-13 13:18:29 -0500},
+	date-modified = {2022-05-13 13:18:29 -0500},
+	howpublished = {Unpublished manuscript},
+	month = {May 31,},
+	title = {On ``{How} to draw a graph''},
+	url = {https://www.math.uwaterloo.ca/~jfgeelen/Publications/tutte.pdf},
+	year = {2012},
+	bdsk-url-1 = {https://www.math.uwaterloo.ca/~jfgeelen/Publications/tutte.pdf}}
+
+@incollection{lv-grg-02,
+	author = {Lov{\'a}sz, L{\'a}szl{\'o} and Vesztergombi, Katalin},
+	booktitle = {Paul Erd{\H o}s and his Mathematics},
+	date-added = {2022-05-13 13:18:29 -0500},
+	date-modified = {2022-05-13 13:18:29 -0500},
+	number = {11},
+	pages = {471--498},
+	publisher = {J{\'a}nos Bolyai Math. Soc.},
+	series = {Bolyai Soc. Math. Stud.},
+	title = {Geometric representations of graphs},
+	year = {2002}}
+
+@inproceedings{el-ptmme-21,
+	arxiv = {2106.14086v2},
+	author = {Erickson, Jeff and Lin, Patrick},
+	booktitle = {Proc. 29th Int. Symp. Graph Drawing Network Vis.},
+	date-added = {2021-11-26 15:27:16 -0600},
+	date-modified = {2021-11-26 15:29:58 -0600},
+	title = {Planar and Toroidal Morphs Made Easier},
+	year = {2021}}
 
 @book{cb-asant-88,
 	author = {Casson, Andrew J. and Bleiler, Steven A.},
@@ -3490,8 +3522,8 @@
 @book{l-gg-19,
 	author = {Lov{\'a}sz, L{\'a}szl{\'o}},
 	date-added = {2019-12-03 05:41:10 -0600},
-	date-modified = {2019-12-03 05:42:45 -0600},
-	number = {69},
+	date-modified = {2022-05-13 13:19:23 -0500},
+	number = {65},
 	publisher = {Amer. Math. Soc.},
 	series = {Colloquium Publications},
 	title = {Graphs and Geometry},
@@ -9115,13 +9147,13 @@
 	author = {Steinitz, Ernst and Rademacher, Hans},
 	comments = {"von Ernst Steinitz, aus dem Nachlass herausgegeben und erg{\"a}nzt von Hans Rademacher"},
 	date-added = {2015-07-08 17:38:49 +0000},
-	date-modified = {2015-07-08 17:55:47 +0000},
+	date-modified = {2021-11-26 15:26:08 -0600},
 	note = {Reprinted 1976},
+	number = {41},
 	publisher = {Springer-Verlag},
 	read = {1},
 	series = {Grundlehren der mathematischen Wissenschaften},
 	title = {Vorlesungen {\"u}ber die Theorie der Polyeder: unter Einschlu{\ss} der Elemente der Topologie},
-	volume = {41},
 	year = {1934}}
 
 @article{cm-dnrn-91,
