--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2022-05-13 13:23:25 -0500 
+%% Created for Jeff Erickson at 2022-05-13 13:26:49 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{s-ttdg-18,
+	author = {Spielman, Daniel},
+	date-added = {2022-05-13 13:26:42 -0500},
+	date-modified = {2022-05-13 13:26:42 -0500},
+	howpublished = {Unpublished lecture note},
+	month = {October 22,},
+	title = {Tutte's Theorem: {How} to draw a graph},
+	url = {https://www.cs.yale.edu/homes/spielman/561/lect15-18.pdf},
+	year = {2018},
+	bdsk-url-1 = {https://www.cs.yale.edu/homes/spielman/561/lect15-18.pdf}}
 
 @misc{g-dg-12,
 	author = {Geelen, Jim},
