update DOIs for JGAA

--- a/topology.bib
+++ b/topology.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2022-05-13 13:26:49 -0500 
+%% Created for Jeff Erickson at 2022-10-14 10:33:34 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -48,7 +48,11 @@
 	author = {Erickson, Jeff and Lin, Patrick},
 	booktitle = {Proc. 29th Int. Symp. Graph Drawing Network Vis.},
 	date-added = {2021-11-26 15:27:16 -0600},
-	date-modified = {2021-11-26 15:29:58 -0600},
+	date-modified = {2022-10-14 10:17:33 -0500},
+	doi = {10.1007/978-3-030-92931-2_9},
+	number = {12868},
+	pages = {123--137},
+	series = {Lecture Notes Comput. Sci.},
 	title = {Planar and Toroidal Morphs Made Easier},
 	year = {2021}}
 
@@ -102,12 +106,18 @@
 	year = {1988},
 	bdsk-url-1 = {https://doi.org/10.1016/0095-8956(88)90094-9}}
 
-@misc{df-ftfgr-21,
+@inproceedings{df-ftfgr-21,
 	arxiv = {2108.09483},
 	author = {{Di Battista}, Giuseppe and Frati, Fabrizio},
+	booktitle = {Proc. 29th Int. Symp. Graph Drawing Network Vis.},
 	date-added = {2021-09-10 10:35:19 -0500},
-	date-modified = {2021-10-25 14:16:07 -0500},
-	howpublished = {Preprint},
+	date-modified = {2022-10-14 10:16:38 -0500},
+	doi = {10.1007/978-3-030-92931-2_8},
+	editor = {Purchase, Helen C. and Rutter, Ignaz},
+	number = {12868},
+	pages = {109--122},
+	publisher = {Springer},
+	series = {Lecture Notes Comput. Sci.},
 	title = {From {Tutte} to {Floater} and {Gotsman}: {On} the Resolution of Planar Straight-line Drawings and Morphs},
 	year = {2021}}
 
@@ -291,7 +301,8 @@
 	arxiv = {1910.00240},
 	author = {Cerf, Jean},
 	date-added = {2021-06-24 15:31:05 -0500},
-	date-modified = {2021-06-24 15:33:24 -0500},
+	date-modified = {2022-10-14 10:11:31 -0500},
+	doi = {10.48550/arXiv.1910.00240},
 	howpublished = {Preprint},
 	month = {October},
 	title = {About the {Bloch}--{Connelly}--{Henderson} Theorem on the simplexwise linear homeomorphisms of a convex 2-disk},
@@ -301,7 +312,8 @@
 	arxiv = {2107.05159},
 	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
 	date-added = {2021-06-24 14:48:05 -0500},
-	date-modified = {2021-08-20 11:40:07 -0500},
+	date-modified = {2022-10-14 10:25:38 -0500},
+	doi = {10.48550/arXiv.2107.05159},
 	howpublished = {Preprint},
 	month = {July},
 	title = {The deformation space of geodesic triangulations of flat tori},
@@ -367,7 +379,8 @@
 	author = {Angelini, Patrizio and Lozzo, Giordano Da and Frati, Fabrizio and Lubiw, Anna and Patrignani, Maurizio and Roselli, Vincenzo},
 	booktitle = {Proc. 31st Int. Symp. Comput. Geom.},
 	date-added = {2021-06-18 11:13:54 -0500},
-	date-modified = {2021-06-18 11:15:39 -0500},
+	date-modified = {2022-10-14 10:08:08 -0500},
+	doi = {10.4230/LIPIcs.SOCG.2015.126},
 	number = {34},
 	pages = {126--140},
 	series = {Leibniz Int. Proc. Informatics},
@@ -477,22 +490,26 @@
 	year = {2015},
 	bdsk-url-1 = {https://doi.org/10.1145/2816795.2818099}}
 
-@misc{l-sgts-20,
+@article{l-sgts-22,
 	arxiv = {1910.03070v3},
 	author = {Luo, Yanwen},
 	date-added = {2021-05-31 14:55:49 -0500},
-	date-modified = {2021-06-24 15:38:48 -0500},
-	howpublished = {Preprint},
-	month = {August},
+	date-modified = {2022-10-14 10:25:04 -0500},
+	doi = {10.1007/s00454-021-00359-4},
+	journal = {Discrete Comput. Geom.},
+	number = {3},
+	pages = {709--727},
 	title = {Spaces of geodesic triangulations of surfaces},
-	year = {2020}}
+	volume = {68},
+	year = {2022}}
 
 @misc{lwz-dsgtg-21,
 	arxiv = {2105.00612},
 	author = {Luo, Yanwen and Wu, Tianqi and Zhu, Xiaoping},
 	comments = {asymmetric Tutte-Floater on hyperbolic surfaces},
 	date-added = {2021-05-31 14:51:22 -0500},
-	date-modified = {2021-05-31 14:53:23 -0500},
+	date-modified = {2022-10-14 10:25:12 -0500},
+	doi = {10.48550/arXiv.2105.00612},
 	howpublished = {Preprint},
 	month = {May},
 	title = {The deformation space of geodesic triangulations and generalized {Tutte's} embedding theorem},
@@ -5290,7 +5307,8 @@
 	author = {Steiner, Dvir and Fischer, Anath},
 	booktitle = {Proc. 9th ACM Symp. Solid Modeling Appl.},
 	date-added = {2019-03-21 10:11:33 +0100},
-	date-modified = {2019-03-21 10:15:14 +0100},
+	date-modified = {2022-10-14 10:31:55 -0500},
+	doi = {10.2312/sm.20041379},
 	pages = {83--91},
 	title = {Planar parameterization for closed 2-manifold genus-1 meshes},
 	year = {2004}}
@@ -13442,7 +13460,8 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @article{t-detie-48,
 	author = {Tutte, William T.},
 	date-added = {2012-03-14 16:06:43 +0000},
-	date-modified = {2020-11-13 12:00:34 -0600},
+	date-modified = {2022-10-14 10:33:33 -0500},
+	doi = {10.1017/S030500410002449X},
 	journal = {Math. Proc. Cambridge Phil. Soc.},
 	keywords = {band decomposition, directed matrix-tree theorem},
 	number = {4},
