--- a/topology.bib
+++ b/topology.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Jeff Erickson at 2023-02-23 19:12:52 -0600 
+%% Created for Jeff Erickson at 2023-03-01 09:44:26 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{k-msspp-05,
+	abstract = {Given an n-node planar graph with nonnegative edge-lengths, our algorithm takes O(n log n) time to construct a data structure that supports queries of the following form in O(log n) time: given a destination node t on the boundary of the infinite face, and given a start node s anywhere, find the s-to-t distance.},
+	author = {Klein, Philip N.},
+	booktitle = {Proc. 16th Ann. ACM-SIAM Symp. Discrete Algorithms},
+	comments = {No DOI: https://dl.acm.org/doi/abs/10.5555/1070432.1070454},
+	date-added = {2023-03-01 09:38:19 -0600},
+	date-modified = {2023-03-01 09:43:29 -0600},
+	pages = {146--155},
+	title = {Multiple-Source Shortest Paths in Planar Graphs},
+	year = {2005}}
 
 @book{s-pwssv-55,
 	date-added = {2023-02-23 17:27:49 -0600},
@@ -8571,9 +8582,11 @@
 	bdsk-url-1 = {https://doi.org/10.1137/1.9781611973105.26}}
 
 @article{cce-msspe-13,
+	arxiv = {1202.0314},
 	author = {Cabello, Sergio and Chambers, Erin W. and Erickson, Jeff},
 	date-added = {2016-11-22 16:54:53 +0000},
-	date-modified = {2016-11-22 16:54:55 +0000},
+	date-modified = {2023-03-01 09:37:20 -0600},
+	doi = {10.1137/12086427},
 	journal = {SIAM J. Comput.},
 	number = {4},
 	pages = {1542--1571},
@@ -12742,9 +12755,9 @@ A main objective of studying $\Delta\leftrightarrow$Y transformations is finding
 @inproceedings{cc-msspg-07,
 	author = {Cabello, Sergio and Chambers, Erin W.},
 	booktitle = {Proc. 18th Ann. ACM-SIAM Symp. Discrete Algorithms},
-	comments = {no DOI},
+	comments = {no DOI --- https://dl.acm.org/doi/10.5555/1283383.1283394},
 	date-added = {2012-07-13 00:12:57 +0000},
-	date-modified = {2018-10-31 12:54:32 -0500},
+	date-modified = {2023-03-01 09:44:04 -0600},
 	keywords = {graphs},
 	pages = {89--97},
 	read = {1},
